--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ main {
   display: flex;
   flex-flow: column wrap;
   height: 11in;
-  width: 100%;
+  width: 8in;
   margin-left: auto;
   margin-right: auto;
 }
